--- a/index.html
+++ b/index.html
@@ -1,69 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my-portfolio</title>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"> -->
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./css/style.css" />
 </head>
-
-<body>
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> -->
-
+   <body>
     <nav class="navbar">
-        <div class="nav-list">
-
-            <img src="./img/aarti-logo2.png" height="60px" class="img-logo-aarti" />
-
-            <span><a href="./index.html"><b>Home</b></a></span>
-            <span><a href="work.html"><b>Education</b></a></span>
-            <span><a href="project.html"><b>Skills</b></a></span>
-            <span><a href="project.html"><b>Project</b></a></span>
-            <span><a href="about.html"><b>About</b></a></span>
+        <span class="heading">AARTI &nbsp;MEDHE</span>
+        <div class="navbar-lists">
+            <span class="list"><a href=""><b>HOME</b></a></span>
+            <span class="list"><a href=""><b>SKILLS</b></a></span>
+            <span class="list"><a href=""><b>PROJECTS</b></a></span>
+            <span class="list"><a href=""><b>ABOUT</b></a></span>
+            <span class="list"><a href=""><b>CONTACT</b></a></span>
         </div>
     </nav>
-    <div class="main-container">
-        <img src="./img/pink-rose.avif" height="570px" class="img-pink" />
-        <img src="./img/aarti.jpg" height="300px" class="img-2" />
-    </div>
-    <div class="heading1">
-        <h1 class="header1-aaru">Hello I'm Aarti Medhe</h1>
-        <h2 class="full-stack">I'm a Full Stack web-Developer(Fresher)</h2>
-        <h2 class="portfolio-tagline">This is my Portfolio Website</h2>
-        <button class="btn"><b>View My Portfolio</b></button>
-    </div>
-    <div>
-        <h1 class="work">Education</h1>
-    </div>
-
-    <div class="container-work-card">
-        <span class="container-lines">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have recently complete my
-            BBA(CA) degree from rahuri<br /> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; college.</span>
-        <span class="container-lines"> & currently learning Full Stack Development Course in<br />
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Road to code.</span>
-        <span class="container-lines">I have good knowelege about html, css,
-            git,<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; github,bootstrap &</span>
-        <span class="container-lines">I have ability to grasp new skills quickly<br /></span>
-    </div>
-
-    <div>
-        <h1 class="skill">Skills</h1>
-    </div>
 
 
-    <div class="container-work-card2">
+    <div class="main-container-img-tagline">
+        <div class="tagline-info">
+            <h1 class="tagline">HEY, I'M AARTI MEDHE</h1>
+            <span class="info-mern-stack"> &nbsp;&nbsp; A Mern stack Developer Passionate About<br /> &nbsp; &nbsp;
+                Coding.I have ability to grasp New Skills <br /> &nbsp; &nbsp;&nbsp;&nbsp;Quickly.Always ready to try
+                Hands-On-<br /> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;New and Emerging Technologies.</span>
+            <h3 class="portfolio-line">This is My Portfolio Website..!!</h3>
+            <button type="button" class="btn-resume">Show &nbsp;Resume</button>
+        </div>
+        <div>
+            <img src="./img/comp-img5.jpg" height="330px" class="img-computer-girl" />
+        </div>
+    </div>
+    <br /><br /><br /><br /><br /><br />
+    <h2 class="skills">MY &nbsp;SKILLS</h2>
+    <br />
+    <br />
 
+    <h2 class="sub-tools">◽ WEB &nbsp;DEVELOPMENT</h2>
+
+    <div class="main-card-container">
+        <div class="card-logo">
+            <img src="./img/html-5.png" height="100px" class="img-card" class="card-logo" />
+        </div>
+        <div class="card-logo">
+            <img src="./img/css-3.png" height="100px" class="img-card" />
+        </div>
+        <div class="card-logo">
+            <img src="./img/java-script (1).png" height="100px" class="img-card" />
+        </div>
+        <div class="card-logo">
+            <img src="./img/nodejs.jpg" height="100px" width="102px" class="img-card" />
+        </div>
+        <div class="card-logo">
+            <img src="./img/bootstrap.png" height="100px" class="img-card" />
+        </div>
+    </div>
+    <br />
+    <h2 class="sub-tools">◽ TOOL"S</h2>
+    <div class="main-card-container">
+        <div class="card-logo">
+            <img src="./img/git.png" height="100px" class="img-card" />
+        </div>
+        <div class="card-logo">
+            <img src="./img/github.png" height="100px" class="img-card" />
+        </div>
     </div>
 
-    <div>
-        <h1 class="skill">Projects</h1>
-    </div>
+    <br />
+    <br />
+    <h2 class="skills">PROJECTS</h2><br />
+    <br />
+    <h3 class="heading2">Hey You Will Find Some Of My Personal Projects That I Created Is Given Below..</h3>
 
     <div class="project-skill-container">
-
         <div class="project">
             <img src="./img/grocery-img.jpg" height="200px" width="300px">
             <h2 class="heading2">Grocery Store</h2>
@@ -114,7 +123,10 @@
                 &nbsp;&nbsp;&nbsp;<span>
 
 
-                we collaborated to build a website named "Project-Gallery" using HTML,CSS,& Java Script.The website features interactive comp onents like a dice-roller,bulb-magic,BMI-calculator,&score-keeper,all creat -ed using Java Script. The design works great on phones &computers.Take a closer look at our sourcecode &demo to Showcasing OurEffort.
+                    we collaborated to build a website named "Project-Gallery" using HTML,CSS,& Java Script.The website
+                    features interactive comp onents like a dice-roller,bulb-magic,BMI-calculator,&score-keeper,all
+                    creat -ed using Java Script. The design works great on phones &computers.Take a closer look at our
+                    sourcecode &demo to Showcasing OurEffort.
 
 
 
@@ -126,12 +138,22 @@
             <a href="./../project-gallery/index.html" target="_blank" class="project-button">
                 Live
                 Demo </a>
-            <a href="https://github.com/aaru-01/project-gallery.git" target="_blank"
-                class="project-button"> Source Code </a>
+            <a href="https://github.com/aaru-01/project-gallery.git" target="_blank" class="project-button"> Source Code
+            </a>
+        </div>
+    </div>
+
+    <h2 class="skills">ABOUT</h2><br />
+    <div class="main-about-container">
+        <div class="about-container">
+            <div class="img-aarti-container">
+         <img src="./img/aarti.jpg" class="img-aarti"/>
+        </div>
+
+        <h3 class="">EDUCATION</h3>
         </div>
 
     </div>
-
 </body>
 
 </html>
