--- a/practice.html
+++ b/practice.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-portfolio</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/practice-portfolio.css" />
 </head>
 
 <body>
@@ -62,8 +62,8 @@
         <h1 class="skill">Projects</h1>
     </div>
 
-    <div class="project-skill-container">
 
+    <div class="project-skill-container">
         <div class="project">
             <img src="./img/grocery-img.jpg" height="200px" width="300px">
             <h2 class="heading2">Grocery Store</h2>
@@ -114,7 +114,10 @@
                 &nbsp;&nbsp;&nbsp;<span>
 
 
-                we collaborated to build a website named "Project-Gallery" using HTML,CSS,& Java Script.The website features interactive comp onents like a dice-roller,bulb-magic,BMI-calculator,&score-keeper,all creat -ed using Java Script. The design works great on phones &computers.Take a closer look at our sourcecode &demo to Showcasing OurEffort.
+                    we collaborated to build a website named "Project-Gallery" using HTML,CSS,& Java Script.The website
+                    features interactive comp onents like a dice-roller,bulb-magic,BMI-calculator,&score-keeper,all
+                    creat -ed using Java Script. The design works great on phones &computers.Take a closer look at our
+                    sourcecode &demo to Showcasing OurEffort.
 
 
 
@@ -126,10 +129,9 @@
             <a href="./../project-gallery/index.html" target="_blank" class="project-button">
                 Live
                 Demo </a>
-            <a href="https://github.com/aaru-01/project-gallery.git" target="_blank"
-                class="project-button"> Source Code </a>
+            <a href="https://github.com/aaru-01/project-gallery.git" target="_blank" class="project-button"> Source Code
+            </a>
         </div>
-
     </div>
 
 </body>
